--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-spinners": "^0.9.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
